--- a/HW2/HW2_Xiangyu_Hu.ipynb
+++ b/HW2/HW2_Xiangyu_Hu.ipynb
@@ -529,11 +529,11 @@
    "source": [
     "\n",
     "$$Set\\ z =v_1h1 + v_2h2 + v_3 h3 + v_4h4 +c$$\n",
-    "$$ \\frac{\\sigma L}{\\sigma c} = ( \\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot \\frac{e^{-z}} {(1+e^{-z})^2}   $$\n",
-    "$$  \\frac{\\sigma L}{\\sigma v1}   =   ( \\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot h1   $$\n",
-    "$$  \\frac{\\sigma L}{\\sigma v2}   =   ( \\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot h2   $$\n",
-    "$$  \\frac{\\sigma L}{\\sigma v3}   =   ( \\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot h3   $$\n",
-    "$$  \\frac{\\sigma L}{\\sigma v4}   =   ( \\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot h4   $$"
+    "$$ \\frac{\\sigma L}{\\sigma c} = ( -\\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot \\frac{e^{-z}} {(1+e^{-z})^2}   $$\n",
+    "$$  \\frac{\\sigma L}{\\sigma v1}   =   ( -\\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot h1   $$\n",
+    "$$  \\frac{\\sigma L}{\\sigma v2}   =   ( -\\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot h2   $$\n",
+    "$$  \\frac{\\sigma L}{\\sigma v3}   =   ( -\\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot h3   $$\n",
+    "$$  \\frac{\\sigma L}{\\sigma v4}   =   ( -\\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot h4   $$"
    ]
   },
   {
@@ -541,24 +541,24 @@
    "metadata": {},
    "source": [
     "$$ when\\ wx+b > 0: $$\n",
-    "$$  \\frac{\\sigma L}{\\sigma b_1}  =  ( \\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot v_1 $$\n",
-    "$$  \\frac{\\sigma L}{\\sigma b_2}  =  ( \\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot v_2 $$\n",
-    "$$  \\frac{\\sigma L}{\\sigma b_3}  =  ( \\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot v_3 $$\n",
-    "$$  \\frac{\\sigma L}{\\sigma b_4}  =  ( \\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot v_4 $$"
+    "$$  \\frac{\\sigma L}{\\sigma b_1}  =  ( -\\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot v_1 $$\n",
+    "$$  \\frac{\\sigma L}{\\sigma b_2}  =  ( -\\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot v_2 $$\n",
+    "$$  \\frac{\\sigma L}{\\sigma b_3}  =  ( -\\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot v_3 $$\n",
+    "$$  \\frac{\\sigma L}{\\sigma b_4}  =  ( -\\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot v_4 $$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$ \\frac{\\sigma L}{\\sigma w_{11}}  =  ( \\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot v_1 x_1 $$\n",
-    "$$ \\frac{\\sigma L}{\\sigma w_{12}}  =  ( \\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot v_2 x_1 $$\n",
-    "$$ \\frac{\\sigma L}{\\sigma w_{13}}  =  ( \\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot v_3 x_1 $$\n",
-    "$$ \\frac{\\sigma L}{\\sigma w_{14}}  =  ( \\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot v_4 x_1 $$\n",
-    "$$ \\frac{\\sigma L}{\\sigma w_{21}}  =  ( \\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot v_1 x_2 $$\n",
-    "$$ \\frac{\\sigma L}{\\sigma w_{22}}  =  ( \\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot v_2 x_2 $$\n",
-    "$$ \\frac{\\sigma L}{\\sigma w_{23}}  =  ( \\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot v_3 x_2 $$\n",
-    "$$ \\frac{\\sigma L}{\\sigma w_{24}}  =  ( \\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot v_4 x_2 $$"
+    "$$ \\frac{\\sigma L}{\\sigma w_{11}}  =  (- \\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot v_1 x_1 $$\n",
+    "$$ \\frac{\\sigma L}{\\sigma w_{12}}  =  ( -\\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot v_2 x_1 $$\n",
+    "$$ \\frac{\\sigma L}{\\sigma w_{13}}  =  ( -\\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot v_3 x_1 $$\n",
+    "$$ \\frac{\\sigma L}{\\sigma w_{14}}  =  (- \\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot v_4 x_1 $$\n",
+    "$$ \\frac{\\sigma L}{\\sigma w_{21}}  =  ( -\\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot v_1 x_2 $$\n",
+    "$$ \\frac{\\sigma L}{\\sigma w_{22}}  =  ( -\\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot v_2 x_2 $$\n",
+    "$$ \\frac{\\sigma L}{\\sigma w_{23}}  =  (- \\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot v_3 x_2 $$\n",
+    "$$ \\frac{\\sigma L}{\\sigma w_{24}}  =  ( -\\frac{y}{\\hat{y_i}} +  \\frac{1-y}{1-\\hat{y_i}} ) \\cdot    \\frac{e^{-z}} {(1+e^{-z})^2} \\cdot v_4 x_2 $$"
    ]
   },
   {
