--- a/HW2/HW2_Xiangyu_Hu.ipynb
+++ b/HW2/HW2_Xiangyu_Hu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,18 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def ff_nn_Relu(x,w,b):\n",
-    "    z=np.dot(w,x)\n",
+    "    z=np.dot(w,x)+b\n",
     "    return tf.nn.relu(z)    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,16 +103,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(1, 3), dtype=float64, numpy=array([[0.88079708, 0.73105858, 0.81757448]])>"
+       "<tf.Tensor: shape=(1, 3), dtype=float64, numpy=array([[0.81757448, 0.62245933, 0.62245933]])>"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,11 +123,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## the probabilities of each sample is 0.88, 0.73, 0.82."
+    "## the probabilities of each sample is 0.82, 0.62, 0.62."
    ]
   },
   {
